add Encoding("GB2312") in MainProcess.cs & SIPTransport.cs

--- a/SIPSorcery.28181/SIPSorcery.28181.csproj
+++ b/SIPSorcery.28181/SIPSorcery.28181.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
     <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
