--- a/GB28181.Service/GB28181.Service.csproj
+++ b/GB28181.Service/GB28181.Service.csproj
@@ -36,10 +36,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Consul" Version="0.7.2.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Consul">
+      <HintPath>..\packages\Consul\Consul.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
