update for consul

--- a/GB28181.Service/GB28181.Service.csproj
+++ b/GB28181.Service/GB28181.Service.csproj
@@ -42,6 +42,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Consul">
+      <HintPath>..\packages\Consul\Consul.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Config\gb28181.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
