--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,4 @@ $RECYCLE.BIN/
 /SIPSorcery.28181/obj/Debug/netcoreapp2.1/SIPSorcery.28181.csprojAssemblyReference.cache
 /Test.GB28181.Service/bin/Debug/netcoreapp2.1/GB28181.Service.dll
 /Test.GB28181.Service/bin/Debug/netcoreapp2.1/GB28181.Service.pdb
+/SIPSorcery.28181/obj/Debug/netcoreapp2.1/SIPSorcery.28181.csproj.FileListAbsolute.txt
